# model_cpp

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  TODO.md  collection_type.hpp  converter.hpp  data_type.hpp
cmake/: googletest-download.cmake
header/: data_type.h
test/: CMakeLists.txt  test_collection_type.cpp  test_converter.cpp  test_data_type.cpp
